--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
 
     // Recycler View
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    // Song Data
+    implementation 'com.ericchee:songdataprovider:1.0.5'
 }
