--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SongListActivity">
+        <activity
+            android:name=".SongListActivity"
+            android:label="@string/all_songs"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
