--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,10 @@ dependencies {
 
     // Song Data
     implementation 'com.ericchee:songdataprovider:1.0.5'
+
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Volley
+    implementation 'com.android.volley:volley:1.1.1'
 }
