--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     // Volley
     implementation 'com.android.volley:volley:1.1.1'
+
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
